--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 320px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            text-align: justify;
         }
     </style>
 </head>
@@ -29,6 +34,11 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam saepe provident, illo expedita fuga molestias minima! Similique quibusdam aliquam eveniet porro quidem cupiditate placeat? Quasi impedit quas eos fugiat rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id corporis velit nisi amet autem? Porro possimus aperiam tempora incidunt delectus voluptate ad assumenda deserunt? Nam obcaecati iure molestias quaerat maxime? Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, obcaecati tempora laborum ex dicta quae inventore quas nihil odio, magni omnis perspiciatis magnam numquam. Ipsa natus impedit ea eius nesciunt!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde quasi, facilis sit at totam in vero consectetur quaerat quae id dolores nisi, ut provident. At vitae nihil consectetur quidem nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque magnam ex consequuntur nulla soluta, sint dolor impedit asperiores quas fugit repudiandae aut ut sequi cupiditate dolore saepe doloribus porro? Assumenda. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod doloremque accusamus error at veritatis nihil ratione! Laboriosam sequi provident, nesciunt rerum adipisci aliquam, voluptas natus eum quia iste quas velit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore autem, impedit quasi tenetur minima voluptates dignissimos quo et voluptate deserunt quisquam adipisci ipsum repellendus enim tempora dolor, aut similique recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque reprehenderit corrupti at eaque quos, exercitationem ullam nostrum nihil animi ipsum praesentium! Aliquid placeat repellendus accusamus magni natus ipsum quas rem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum laborum possimus laudantium. Amet officiis fugit ex veniam eaque est corporis eum enim maxime magnam alias beatae rerum id, voluptatem deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veniam non quae dolorum autem provident porro facere, delectus quod amet, minima repellendus qui officiis laudantium, dolores quam vitae? Eveniet, debitis.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto optio quidem, blanditiis error iste nihil? Quia quibusdam quos nam, facere necessitatibus sint molestias ipsa inventore laboriosam laudantium nostrum, minus nihil! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptas, explicabo corrupti eos veniam, iure dolores iusto culpa rerum sequi unde quibusdam consectetur in debitis nisi minima, itaque possimus. Porro? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium at sint, ipsa commodi molestiae alias voluptatem totam laborum quae, quos in cupiditate, pariatur possimus vitae. Similique, magnam! Vel, corporis? In. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, ullam reiciendis atque quo voluptate eaque itaque necessitatibus, facere impedit cumque consequuntur id quae vero sunt esse consectetur dignissimos rerum placeat!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est porro impedit veniam commodi minima esse voluptas quam repudiandae aliquid quia eveniet, hic enim accusamus placeat quas suscipit reprehenderit libero explicabo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam illum quis amet nesciunt, illo veritatis, doloribus at doloremque autem saepe exercitationem soluta rerum iste excepturi, quaerat vel provident sunt incidunt?</p>
     </main>
 </body>
 </html>
