--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -12,18 +12,17 @@
 
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;            
         }
 
-        td{
+        td{ 
             padding: 8px;
             border: 1px solid black;
+            text-align: center; /* alinhamento horizontal */
+            vertical-align: bottom; /* alinhamento vertical */
         }        
-
-        tr.linha2{
-            background-color: gray;
-        }        
-
+        
     </style>
 </head>
 <body>
