--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
+        
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -13,6 +14,16 @@
         table{
             width:400px;
             border-collapse: collapse;
+            line-height: 1.4em;
+        }
+
+        caption{
+            background-color: lightgray;
+            color: white;
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            font-weight: bold;
+            border: 1px solid black;
         }
 
         th{
@@ -24,6 +35,7 @@
 
         td{
             border: 1px solid black;
+            padding-left: 5px;
         }
 
         td.numero{
@@ -36,6 +48,7 @@
     <h1>Uso de Tabelas Grandes</h1>
     <!-- Anatomia Para Tabelas Grandes
          Table
+            Caption é o título da tabela
             thead
                 tr, td, th
             tbody
@@ -45,9 +58,10 @@
      -->
 
      <table>
+        <Caption>População das Unidades Federativas</Caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 100px;">População</th>
         </thead>
         <tbody>
             <tr>
@@ -160,7 +174,7 @@
             </tr>
         </tbody>
         <tfoot>
-            <th>Total de Pessoas</th>
+            <th scope="row">Total de Pessoas</th>
             <td class="numero"><strong>000000</strong></td>
         </tfoot>
      </table>
