--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,12 +9,22 @@
         
         body{
             font-family: Arial, Helvetica, sans-serif;
+            background-color: lightblue;
+        }
+
+        main > table {
+            margin: auto;
+        }
+
+        main h1{
+            text-align: center;
         }
 
         table{
             width:400px;
             border-collapse: collapse;
             line-height: 1.4em;
+            position: relative;
         }
 
         caption{
@@ -24,6 +34,11 @@
             font-size: 1.2em;
             font-weight: bold;
             border: 1px solid black;
+        }
+
+        thead > tr > th{
+            position:sticky;
+            top: 0;
         }
 
         th{
@@ -46,146 +61,153 @@
             background-color: gray;
             color: white;
         }
+        
+        tbody > tr:nth-child(odd){
+            background-color: lightgray;
+        }
 
         tbody > tr:nth-child(even){
-            background-color: lightgray;
+            background-color: white;
         }
 
     </style>
 </head>
 <body>
-    <h1>Uso de Tabelas Grandes</h1>
-    <!-- Anatomia Para Tabelas Grandes
-         Table
-            Caption é o título da tabela
-            thead
-                tr, td, th
-            tbody
-                tr, td, th
-            tfoot
-                tr, td, th
-     -->
-
-     <table>
-        <Caption>População das Unidades Federativas</Caption>
-        <thead>
-            <th scope="col">Estado</th>
-            <th scope="col" style="width: 100px;">População</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>São Paulo</td>
-                <td class="numero">41.262,199</td>                
-            </tr>
-            <tr>
-                <td>Minas Gerais</td>
-                <td class="numero">19.597,330</td>                
-            </tr>
-            <tr>
-                <td>Rio de Janeiro</td>
-                <td class="numero">15.989,929</td>
-            </tr>
-            <tr>
-                <td>Bahia</td>
-                <td class="numero">14.016,906</td>
-            </tr>
-            <tr>
-                <td>Parana</td>
-                <td class="numero">10.444,526</td>
-            </tr>
-            <tr>
-                <td>Rio Grande do Sul</td>
-                <td class="numero">10.693,929</td>
-            </tr>
-            <tr>
-                <td>Pernambuco</td>
-                <td class="numero">8.796,448</td>
-            </tr>
-            <tr>
-                <td>Ceara</td>
-                <td class="numero">8.452,381</td>
-            </tr>
-            <tr>
-                <td>Para</td>
-                <td class="numero">7.851,051</td>
-            </tr>
-            <tr>
-                <td>Santa Catarina</td>
-                <td class="numero">6.248,436</td>
-            </tr>
-            <tr>
-                <td>Goias</td>
-                <td class="numero">6.003,788</td>
-            </tr>
-            <tr>
-                <td>Maranhão</td>
-                <td class="numero">6.574,789</td>
-            </tr>
-            <tr>
-                <td>Amazonas</td>
-                <td class="numero">3.483,985</td>
-            </tr>
-            <tr>
-                <td>Espirito Santo</td>
-                <td class="numero">3.514,952</td>
-            </tr>
-            <tr>
-                <td>Paraíba</td>
-                <td class="numero">3.035,122</td>
-            </tr>
-            <tr>
-                <td>Mato Grosso</td>
-                <td class="numero">3.035,122</td>
-            </tr>
-            <tr>
-                <td>Rio Grande do Norte</td>
-                <td class="numero">3.168,027</td>
-            </tr>
-            <tr>
-                <td>Alagoas</td>
-                <td class="numero">3.120,494</td>
-            </tr>
-            <tr>
-                <td>Piauí</td>
-                <td class="numero">3.118,360</td>
-            </tr>
-            <tr>
-                <td>Distrito Federal</td>
-                <td class="numero">2.570,160</td>
-            </tr>
-            <tr>
-                <td>Mato Grosso do Sul</td>
-                <td class="numero">2.449,024</td>
-            </tr>
-            <tr>
-                <td>Sergipe</td>
-                <td class="numero">2.068,017</td>
-            </tr>
-            <tr>
-                <td>Rondônia</td>
-                <td class="numero">1.562,409</td>
-            </tr>
-            <tr>
-                <td>Tocantis</td>
-                <td class="numero">1.383,445</td>
-            </tr>
-            <tr>
-                <td>Acre</td>
-                <td class="numero">733,559</td>
-            </tr>
-            <tr>
-                <td>Amapá</td>
-                <td class="numero">669,526</td>
-            </tr>
-            <tr>
-                <td>Roraima</td>
-                <td class="numero">450,479</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <th scope="row">Total de Pessoas</th>
-            <td class="numero" id="escu"><strong>000000</strong></td>
-        </tfoot>
-     </table>
+    <main>
+        <h1>Uso de Tabelas Grandes</h1>
+        <!-- Anatomia Para Tabelas Grandes
+             Table
+                Caption é o título da tabela
+                thead
+                    tr, td, th
+                tbody
+                    tr, td, th
+                tfoot
+                    tr, td, th
+         -->
+         <table>
+            <Caption>População das Unidades Federativas</Caption>
+            <thead>
+                <tr>
+                    <th scope="col">Estado</th>
+                    <th scope="col" style="width: 100px;">População</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>São Paulo</td>
+                    <td class="numero">41.262,199</td>
+                </tr>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td class="numero">19.597,330</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td class="numero">15.989,929</td>
+                </tr>
+                <tr>
+                    <td>Bahia</td>
+                    <td class="numero">14.016,906</td>
+                </tr>
+                <tr>
+                    <td>Parana</td>
+                    <td class="numero">10.444,526</td>
+                </tr>
+                <tr>
+                    <td>Rio Grande do Sul</td>
+                    <td class="numero">10.693,929</td>
+                </tr>
+                <tr>
+                    <td>Pernambuco</td>
+                    <td class="numero">8.796,448</td>
+                </tr>
+                <tr>
+                    <td>Ceara</td>
+                    <td class="numero">8.452,381</td>
+                </tr>
+                <tr>
+                    <td>Para</td>
+                    <td class="numero">7.851,051</td>
+                </tr>
+                <tr>
+                    <td>Santa Catarina</td>
+                    <td class="numero">6.248,436</td>
+                </tr>
+                <tr>
+                    <td>Goias</td>
+                    <td class="numero">6.003,788</td>
+                </tr>
+                <tr>
+                    <td>Maranhão</td>
+                    <td class="numero">6.574,789</td>
+                </tr>
+                <tr>
+                    <td>Amazonas</td>
+                    <td class="numero">3.483,985</td>
+                </tr>
+                <tr>
+                    <td>Espirito Santo</td>
+                    <td class="numero">3.514,952</td>
+                </tr>
+                <tr>
+                    <td>Paraíba</td>
+                    <td class="numero">3.035,122</td>
+                </tr>
+                <tr>
+                    <td>Mato Grosso</td>
+                    <td class="numero">3.035,122</td>
+                </tr>
+                <tr>
+                    <td>Rio Grande do Norte</td>
+                    <td class="numero">3.168,027</td>
+                </tr>
+                <tr>
+                    <td>Alagoas</td>
+                    <td class="numero">3.120,494</td>
+                </tr>
+                <tr>
+                    <td>Piauí</td>
+                    <td class="numero">3.118,360</td>
+                </tr>
+                <tr>
+                    <td>Distrito Federal</td>
+                    <td class="numero">2.570,160</td>
+                </tr>
+                <tr>
+                    <td>Mato Grosso do Sul</td>
+                    <td class="numero">2.449,024</td>
+                </tr>
+                <tr>
+                    <td>Sergipe</td>
+                    <td class="numero">2.068,017</td>
+                </tr>
+                <tr>
+                    <td>Rondônia</td>
+                    <td class="numero">1.562,409</td>
+                </tr>
+                <tr>
+                    <td>Tocantis</td>
+                    <td class="numero">1.383,445</td>
+                </tr>
+                <tr>
+                    <td>Acre</td>
+                    <td class="numero">733,559</td>
+                </tr>
+                <tr>
+                    <td>Amapá</td>
+                    <td class="numero">669,526</td>
+                </tr>
+                <tr>
+                    <td>Roraima</td>
+                    <td class="numero">450,479</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <th scope="row">Total de Pessoas</th>
+                <td class="numero" id="escu"><strong>000000</strong></td>
+            </tfoot>
+         </table>         
+    </main>
 </body>
 </html>
