--- a/desafios/desafio14/index.html
+++ b/desafios/desafio14/index.html
@@ -42,17 +42,17 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2" class="cabeçario">Área</th>
-                <th rowspan="2" class="cabeçario">Disciplinas</th>
-                <th colspan="2" class="cabeçario">Notas</th>
-                <th rowspan="2" class="cabeçario">Média</th>
+                <th rowspan="2" scope="col" class="cabeçario">Área</th>
+                <th rowspan="2" scope="col" class="cabeçario">Disciplinas</th>
+                <th colspan="2" scope="colgroup" class="cabeçario">Notas</th>
+                <th rowspan="2" scope="col" class="cabeçario">Média</th>
             </tr>
             <tr>
-                <th class="cabeçario">Nota 1</th>
-                <th class="cabeçario">Nota 2</th>
+                <th scope="col" class="cabeçario">Nota 1</th>
+                <th scope="col" class="cabeçario">Nota 2</th>
             </tr>
             <tr>
-                <th rowspan="4">Exatas</th>
+                <th rowspan="4" scope="rowgroup">Exatas</th>
                 <td>Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -77,11 +77,11 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="media">Média de Exatas</th>
+                <th colspan="4" scope="row" class="media">Média de Exatas</th>
                 <td class="vmedia">0.0</td>
             </tr>
             <tr>
-                <th rowspan="2">Humanas</th>
+                <th rowspan="2" scope="rowgroup">Humanas</th>
                 <td>História</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -94,7 +94,7 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="media">Média de Humanas</th>
+                <th colspan="4" scope="row" class="media">Média de Humanas</th>
                 <td class="vmedia">0.0</td>
             </tr>
         </thead>
