--- a/exercicios/ex024/ifrane002.html
+++ b/exercicios/ex024/ifrane002.html
@@ -24,7 +24,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illo incidunt praesentium sunt, soluta quia quidem consequatur ut consectetur. Et dicta asperiores fuga! Quae corrupti illum, reiciendis esse quam saepe?</p>
 
-    <iframe src="https://github.com/Rodrigocaiado" frameborder="0">
+    <iframe src="pag001.html" frameborder="0">
         <p>Infelismente seu navegador não é compativel com essa pagina.</p>
     </iframe>
 
