--- a/exercicios/ex024/pag001.html
+++ b/exercicios/ex024/pag001.html
@@ -31,6 +31,14 @@
         main#container{
             overflow-x: auto;
         }
+
+        tr:nth-child(even){
+            background-color: rgba(255, 255, 255, 0.432);
+        }
+
+        tr:nth-child(odd){
+            background-color: ;
+        }
     </style>
     
     <title>Teste</title>
