--- a/exercicios/ex024/paginas/pag001.html
+++ b/exercicios/ex024/paginas/pag001.html
@@ -36,12 +36,9 @@
             background-color: rgba(255, 255, 255, 0.432);
         }
 
-        tr:nth-child(odd){
-            background-color: ;
-        }
     </style>
     
-    <title>Teste</title>
+    <title>Site de Teste</title>
 </head>
 <body>
         <h1>Tabelas pequenas</h1>
