exercicios de iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -37,7 +37,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus sapiente, doloribus, commodi fugit blanditiis, vel voluptas placeat quisquam reprehenderit quaerat reiciendis similique asperiores cum eius consequuntur! Sunt, provident recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, consequatur aliquam dicta fugiat qui quod minus deleniti quos mollitia deserunt, ex voluptatem illum optio odio sint aut corporis veniam porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolor, sed maxime itaque molestias, veritatis fuga iure nesciunt perspiciatis maiores error minus laboriosam voluptates ducimus ullam inventore aut veniam autem.</p>
 
-    <iframe src="" name="frame"></iframe>
+    <iframe srcdoc="<h1>Testando HTML dentro do iframe</h1> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non nostrum eos, distinctio eligendi, tenetur, natus a doloribus praesentium tempore quam error incidunt expedita deserunt nihil quaerat eius culpa fugit aliquid?</p> <img src='imagens/naruto.png'>" name="frame"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo quod minima a. Animi tenetur tempore, culpa sed, illo magni molestias voluptatem velit cupiditate numquam saepe facere nesciunt architecto vel! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quaerat culpa fugit beatae error dicta ut quidem laborum at fuga, dolore repellendus perferendis sunt, hic laudantium corporis velit, laboriosam unde. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dicta, modi sed quibusdam vel nulla provident commodi repudiandae corrupti quam consectetur, excepturi ratione porro doloremque suscipit repellendus impedit ut sequi.</p>
 </body>
