--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Meu Primeiro formulario</h1>
-    <form>
-        <p>Nome: <input type="text" name="nome" id="nome" autofocus></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="Sobrenome"></p>
+    <form action="cadastro.php">
+        <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome" autofocus></p>
+        <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
