aprendendo sobre method

--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Meu Primeiro formulario</h1>
-    <form action="cadastro.php">
+    <form method="post" action="cadastro.php">
         <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome" autofocus></p>
         <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
