--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -27,6 +27,10 @@
             <input type="month" name="mes" id="imes" required>
         </p>
         <p>
+            <label for="itime">Horário da Prova</label>
+            <input type="time" name="time" id="itime">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
