--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Exemplo de Formulário</h1>
 
-    <form action="cadastro.php" method="get">
+    <form action="" method="get">
         <fieldset>
             <legend>Sexo</legend>
             <input type="radio" name="sexo" id="imas">Masculino
