--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -9,7 +9,22 @@
 <body>
     <h1>Exemplos de Formulário</h1>
 
-    <form action="" method="get" autocomplete="on">
+    <form action="" method="post" autocomplete="on">
+
+        <p>
+            <label for="icor">Escolha uma cor:</label>
+            <input type="color" name="cor" id="icor" >
+        </p>
+
+        <p>
+            <label for="ifoto">Imagem:</label>
+            <input type="file" name="foto" id="ifoto" required>
+        </p>
+
+        <p>
+            <label for="inivek">O que achou  do site:</label>
+            <input type="range" name="range" id="inivek" min="1" max="10" value="10">
+        </p>
 
 
         <p>
