--- a/exercicios/ex025/form011.html
+++ b/exercicios/ex025/form011.html
@@ -11,15 +11,15 @@
     <form action="cadastro.php" method="post">
         <p>
             <label for="in1">Numero 1:</label>
-            <input type="number" name="n1" id="in1" min="1" max="20" required>
+            <input type="number" name="n1" id="in1" min="1" max="20" required oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
         </p>
         <p>
             <label for="in2">Número 2:</label>
-            <input type="number" name="n2" id="in2" min="1" max="20" required>
+            <input type="number" name="n2" id="in2" min="1" max="20" required oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
         </p>
         <p>
             <label for="isoma">Soma:</label>
-            <output >0</output>
+            <output name="soma" id="isoma">0</output>
         </p>
         <p>
             <input type="submit" value="Enviar">
