--- a/exercicios/ex026/mq003/index.html
+++ b/exercicios/ex026/mq003/index.html
@@ -26,7 +26,7 @@
         }
 
         /* Configurações paisagem (landscape) */
-        @media screen and p {
+        @media screen and (orientation: landscape) {
             html, body{
             background-image: url(../imagens/cev-landscape.jpg);
             background-size: contain;
@@ -35,8 +35,14 @@
         }
         }
 
-        @media screen {
-            
+        /* configurações retrato (portrait) */
+        @media screen and (orientation: portrait) {
+            html, body{
+            background-image: url(../imagens/cev-portrait.jpg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center bottom;
+        }
         }
         
     </style>
